fixtures/errors/promise_constructor_no_function.js
let p = new Promise(1);
